[package]
name = "daemon"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "*", features = ["full"] }
framebuffer = "0.3.1"
dmsg = { path = "../dmsg/" }
lazy_static = "*"
async-recursion = "1.0.0"
