[package]
name = "fbdc"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "*", features = ["full"] }
dmsg = { path = "../dmsg/" }
clap = { version = "3.1.15", features = ["derive"] }
